--- a/TheAlgorithmDesignManual.vcxproj.filters
+++ b/TheAlgorithmDesignManual.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="graphs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="graph_algorithms.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TheAlgorithmDesignManual.cpp">
